--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+    charset utf-8;
 
     # Gzip compression for speed
     gzip on;
